@@ -1,3 +1,10 @@
+2015-01-19  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* tp/Texinfo/Parser.pm (Module documentation section): Tweak
+	descriptions of what 'node_manuals' entries and 
+	'menu_entry_node' are.  Add section mentioning 'nodes' and 
+	'menus' arrays.
+
 2015-01-18  Karl Berry  <karl@gnu.org>
 
 	* info/t/Init-inter.inc: if mknod doesn't exist,
